backend/k8s/backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-backend
spec:
  podSelector:
    matchLabels:
      network-backend: "true"
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          network-backend: "true"
  egress:
    - to:
      - podSelector:
          matchLabels:
            network-backend: "true"
